--- a/exponent-auth0/package.json
+++ b/exponent-auth0/package.json
@@ -15,10 +15,7 @@
     "jwt-decode": "^2.1.0",
     "react": "~15.4.0",
     "react-apollo": "^0.10.1",
-    "react-native": "git+https://github.com/exponentjs/react-native#sdk-14.0.0",
-    "react-native-material-design": "^0.3.7",
-    "react-native-svg": "^5.1.5",
-    "react-native-svg-uri": "^1.2.0"
+    "react-native": "git+https://github.com/exponentjs/react-native#sdk-14.0.0"
   },
   "devDependencies": {
     "eslint": "^3.13.1",
