--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "jwt-decode": "^2.1.0",
     "react": "~15.4.0",
     "react-apollo": "^0.10.1",
-    "react-native": "git+https://github.com/exponentjs/react-native#sdk-14.0.0"
+    "react-native": "git+https://github.com/exponentjs/react-native#sdk-14.0.0",
+    "react-native-interactable": "^0.0.8",
+    "react-navigation": "^1.0.0-beta.7"
   },
   "devDependencies": {
     "eslint": "^3.13.1",
